feat(MailService): Refactor welcome email template loading to use InputStream from classpath